system/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
  labels:
    app: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      enableServiceLinks: false
      containers:
        - name: lldap
          image: ghcr.io/lldap/lldap:v0.6.3-alpine-rootless
          command: ["/bin/sh", "-c"]
          args:
            - |
              export LLDAP_DATABASE_URL="postgres://lldap:${LLDAP_DB_PASSWORD}@postgres-cluster-rw.cnpg-system.svc.cluster.local:5432/lldap"
              exec /app/lldap run
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 17170
              name: web
          resources:
            requests:
              memory: 32Mi
              cpu: 10m
            limits:
              memory: 128Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /health
              port: 17170
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 17170
            initialDelaySeconds: 5
            periodSeconds: 10
